# woys

./: .gitignore  .gitleaksignore  BLOCKERS.md  CHANGELOG.md  LESSONS.md  LICENSE  NOTICE  PROGRESS.md  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: 00-recon.md  05-perf.md  06-model-switch-bug.md  07-audio-quality-bug.md  08-pacat-underrun-bug.md  10-monitor-leak-diag.md  11-microcuts-bug.md  12-vad-misfire-investigation.md  13-detector-calibration.md  14-v070-baseline.md  15-auto-sweep-methodology.md  19-pw-investigation.md  19-v09x-plan.md  20-mitigations-tuning.md  21-v09x-final-summary.md  22-gpu-clock-lock.md  23-rnnoise-chain.md  CS2-SETUP.md  DISCORD-SETUP.md  INSTALL.md  MODELS.md  QA.md  TROUBLESHOOTING.md  sweep_latency_20260506-192140.json
docs/decisions/: 0000-template.md  0001-ort-vs-tensorrt.md  0002-rvc-as-vc-method.md  0003-textual-tui-vs-alternatives.md  0004-sample-rate-48000.md  0005-toml-config.md  0006-rnnoise-opt-in-chain.md  0007-gpu-anti-jitter-default-off.md  0008-nsf-state-passing-out-of-scope.md  0009-native-pipewire-helper-in-c.md  0010-fp16-contentvec-evaluation-stale.md  0011-fp16-tensorrt-rvc-validation-deferred.md  0012-amitaro-default-voice.md  0013-latency-target-retired.md  README.md
pkg/: .SRCINFO  PKGBUILD  README-AUR.md  vcclient-cachy-mic.service  woys-mic.service
pkg/browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
scripts/: bench_engine_runtime.py  bench_inference.py  bench_iobinding.py  bench_loopback.py  bench_streaming.py  benchmark_compare.py  benchmark_probe.py  check_version_drift.sh  cuts_per_min_check.py  download_weights.py  gen_sweep_fixture.py  make_test_wav.py  migrate_to_woys.py  probe_writer_jitter.py  profile_engine.py  release.py  smoke_rvc_onnx.py  sola_ab_harness.py  sweep_latency.py  v010_alloc_probe.py  v010_analyze.py  v010_harness.py  v012_1_tts_run.py  v012_2_proper_sweep.sh  v012_3_grid_sweep.py  v012_3_writeup.py  v012_phase2_sweep.sh  v012_run_and_record.sh  v012_spectral_flux.py  v012_spectrogram_analysis.py  v012_stationary_run.py  v013_0_rnnoise_chain.sh  v013_2_rnnoise_chain.sh  voice_library_import.py
src/audio/: __init__.py  engine.py  inference_client.py  inference_worker.py  pipewire.py  priority.py  sola.py
src/server/: MMVCServerSIO.py  NOTICE
src/server/downloader/: SampleDownloader.py
src/server/restapi/: MMVC_Rest.py
src/server/voice_changer/: VoiceChangerManager.py  VoiceChangerV2.py
src/server/voice_changer/Local/: ServerDevice.py
src/server/voice_changer/RVC/embedder/: OnnxContentvec.py
src/server/voice_changer/RVC/pipeline/: Pipeline.py
src/server/voice_changer/RVC/pitchExtractor/: RMVPEOnnxPitchExtractor.py  RMVPEPitchExtractor.py
src/tui/: __init__.py  app.py  config.py  control.py  hotkey.py
src/vcclient_cachy/: __init__.py  cli.py  convert.py  fp16_convert.py  models.py  profiles.py  tray.py  vcprofile.py
src/woys/: __init__.py  chain.py  cli.py  convert.py  fp16_convert.py  instance_lock.py  logsetup.py  models.py  profiles.py  tray.py  vcprofile.py  xdg.py
tests/: conftest.py  test_audio_pipewire.py  test_chain.py  test_chain_pactl_wrapper.py  test_cli_info.py  test_cli_socket_exit_codes.py  test_cli_traceback_guard.py  test_config_isolation.py  test_config_user_overrides.py  test_config_validation.py  test_control_concurrent_handlers.py  test_control_framing.py  test_control_handler_broad_except.py  test_control_peer_uid.py  test_control_protocol_version.py  test_convert.py  test_convert_fp16_gate.py  test_download_weights.py  test_embedder.py  test_engine_cfg_update_queue.py  test_engine_config_drift.py  test_engine_cpu_fallback.py  test_engine_crash.py  test_engine_deque_iter_safety.py  test_engine_error_history.py  test_engine_inference.py  test_engine_lifecycle_lock.py  test_engine_routing.py  test_engine_signal_handler.py  test_engine_sola_integration.py  test_engine_stats_lock.py  test_engine_swap_queue.py  test_engine_warmup_stage.py  test_environment.py  test_evdev_hotkey_leaks.py  test_gpu_anti_jitter.py  test_index_free.py  test_install_sh.py  test_instance_lock.py  test_interpolate_voiced_gaps_pitch_carry.py  (+31 more)
voice-library/: SOURCES.md
