[project]
name = "vcclient-cachy"
version = "0.2.0"
description = "Linux-native, CachyOS-optimized real-time voice changer. RVC-only on ONNX Runtime CUDA, PipeWire-native, terminal-controlled."
authors = [{ name = "Alireza Hamayeli", email = "alireza.hmyl@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["voice-changer", "rvc", "onnx", "pipewire", "linux", "cachyos"]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Private :: Do Not Upload",
]
dependencies = [
    # ML / inference
    "numpy>=1.26,<2.2",
    "scipy>=1.13",
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
    "onnxruntime-gpu>=1.20,<1.23",
    "onnxsim>=0.4.36",
    # RVC pieces
    "librosa>=0.10",
    "resampy>=0.4.3",
    "torchcrepe>=0.0.22",
    "torchfcpe>=0.0.4",
    "faiss-cpu>=1.8",
    "einops>=0.8",
    "soundfile>=0.12",
    # Server framework
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.30",
    "python-socketio>=5.11",
    "python-multipart>=0.0.9",
    "websockets>=12",
    "pyOpenSSL>=24.0",
    # Utilities
    "huggingface_hub>=0.25",
    "dataclasses-json>=0.6",
    "tqdm>=4.66",
    "psutil>=6",
    "onnx>=1.17",  # Phase C convert subcommand (.pth → .onnx) + fp16 conversion
    "onnxconverter-common>=1.16",
    # TUI + config + IPC
    "textual>=0.85",
    "rich>=13.9",
    "tomli-w>=1.0",
    "dasbus>=1.7",
    # Audio I/O
    "sounddevice>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "py-spy>=0.3.14",
]
# fairseq is needed for the PyTorch hubert/contentvec embedder (recon §9).
# It's notoriously brittle on modern Python; isolate as an extra so the rest
# of the install can succeed even if fairseq fails. Try `pip install fairseq`
# only if needed for embedder fallback.
fairseq = ["fairseq>=0.12"]
# pyworld is only needed for harvest/dio f0 detectors (RMVPE/Crepe/Fcpe don't
# need it). Optional — installs C extensions, sometimes painful.
worldpitch = ["pyworld>=0.3.4"]
# evdev is opt-in for the global hotkey (CS2/VAC users should stay off).
evdev = ["evdev>=1.7"]

[project.scripts]
vcclient-cachy = "vcclient_cachy.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcclient_cachy", "src/server", "src/audio", "src/tui"]

[tool.hatch.build.targets.sdist]
include = ["src/", "pkg/", "docs/", "tests/", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py311"
line-length = 100
# src/server/ is vendored upstream code (Phase 0 recon → Phase 1 trim). We don't
# enforce ruff/mypy on it yet — incremental cleanup happens in later phases.
extend-exclude = ["upstream", ".venv", "src/server", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
disallow_any_unimported = false
# src/server/ is vendored upstream code awaiting incremental cleanup.
exclude = ["upstream/", ".venv/", "build/", "src/server/"]

[[tool.mypy.overrides]]
module = ["soundfile", "sounddevice", "evdev", "textual.*", "rich.*", "onnxruntime", "onnxruntime.*", "librosa.*", "numpy.*", "scipy.*", "torch.*", "huggingface_hub.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires CUDA-capable GPU",
    "pipewire: requires PipeWire daemon",
    "audio_loopback: requires acoustic loopback rig",
    "slow: takes >5s",
]
