[project]
name = "woys"
# Single source of truth: src/woys/__init__.py::__version__. Read here by
# hatchling at build time (see [tool.hatch.version] at the bottom of the
# file). Pre-commit-027 this was a hand-duplicated literal that drifted
# from every other version-bearing surface (README/PROGRESS/PKGBUILD/
# `woys chain --help`) — F-merged-029. Bump the version by editing
# `src/woys/__init__.py` then running `python scripts/release.py`.
dynamic = ["version"]
description = "Linux-native real-time voice changer. RVC-only on ONNX Runtime CUDA, PipeWire-native, terminal-controlled."
authors = [{ name = "Alireza Hamayeli", email = "alireza@hamayeli.com" }]
license = { file = "LICENSE" }
readme = "README.md"
# v0.14.0 (area 14 / C230): bumped <3.12 -> <3.13. fairseq was the
# constraint that pinned to 3.11; it was removed in v0.8.0. ONNX
# Runtime 1.22 ships cp311/cp312/cp313 wheels, so 3.12 is supported.
# Held below 3.13 because torch 2.5.x doesn't ship 3.13 wheels yet.
requires-python = ">=3.11,<3.13"
keywords = ["voice-changer", "rvc", "onnx", "pipewire", "linux", "woys"]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Private :: Do Not Upload",
]
# v0.14.0 (area 14 / C229): runtime deps audited. Many web-server-only
# deps (fastapi/uvicorn/python-socketio/python-multipart/websockets/
# pyOpenSSL) are imported by `src/server/` (vendored upstream) and
# kept because the wheel ships that subtree for the convert path.
# `dasbus` was removed -- D-Bus integration was replaced by Unix-domain
# sockets (src/tui/control.py) in v0.5.x, dasbus had zero imports.
dependencies = [
    # ML / inference
    "numpy>=1.26,<2.2",
    "scipy>=1.13",
    # pin-bump (F-cx5-01): re-verify `_gated_torch_load`'s keyword-only
    # assumption (src/woys/convert.py) and `export2onnx.py:61`'s call signature
    # against `torch.load`'s defaults before raising the upper bound. The
    # `weights_only` default flipped to True in torch 2.6; the consent gate
    # currently relies on that not having flipped silently.
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
    "onnxruntime-gpu>=1.20,<1.23",
    "onnxsim>=0.4.36",
    # RVC pieces
    "librosa>=0.10",
    "resampy>=0.4.3",
    "torchcrepe>=0.0.22",
    "torchfcpe>=0.0.4",
    # woys is INDEX-FREE.
    # `faiss-cpu` was a runtime dep for RVC's optional speaker-
    # similarity index file, but woys never implemented `index_rate`
    # consumption -- the dep was paid every install for a feature
    # that didn't exist. Drop it. `download_repo` now skips .index
    # files; the engine path has no faiss imports.
    "einops>=0.8",
    "soundfile>=0.12",
    # the web stack (fastapi /
    # uvicorn / python-socketio / python-multipart / websockets /
    # pyOpenSSL) is imported only by `src/server/` (vendored
    # upstream) which is only consumed by `woys convert` (.pth ->
    # .onnx). Pre-fix these were mandatory runtime deps -- 6
    # packages every user paid for a feature only used at
    # conversion time. Moved to the `[convert]` optional extra.
    # `woys convert` surfaces an ImportError → install hint if
    # the user runs convert without `pip install '.[convert]'`.
    # (See `[project.optional-dependencies] convert` below.)
    # Utilities
    "huggingface_hub>=0.25",
    "dataclasses-json>=0.6",
    "tqdm>=4.66",
    "psutil>=6",
    "onnx>=1.17",  # Phase C convert subcommand (.pth -> .onnx) + fp16 conversion
    "onnxconverter-common>=1.16",
    # TUI + config + IPC
    "textual>=0.85",
    "rich>=13.9",
    "tomli-w>=1.0",
    # Audio I/O
    "sounddevice>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "py-spy>=0.3.14",
]
# pyworld is only needed for harvest/dio f0 detectors (RMVPE/Crepe/Fcpe don't
# need it). Optional — installs C extensions, sometimes painful.
worldpitch = ["pyworld>=0.3.4"]
# evdev is opt-in for the global hotkey (CS2/VAC users should stay off).
evdev = ["evdev>=1.7"]
# Optional system-tray icon (KDE Plasma 6 / GNOME via libappindicator).
# pystray pulls in Pillow + xlib/dbus runtime libs.
tray = ["pystray>=0.19", "pillow>=10"]
# convert-only web stack. Used by
# the `src/server/` vendored upstream which `woys convert` consumes.
# Not needed for inference, daily use, or any non-convert path.
convert = [
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.30",
    "python-socketio>=5.11",
    "python-multipart>=0.0.9",
    "websockets>=12",
    "pyOpenSSL>=24.0",
]

[project.scripts]
# v0.6.0 introduced the `woys` binary (renamed from `vcclient-cachy`). The
# deprecated `vcclient-cachy` shim was kept through v0.6.x as a transition
# tool and removed entirely in v0.8.0 — see install.sh for the leftover
# shim cleanup logic.
woys = "woys.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Hatch reads __version__ out of src/woys/__init__.py at build time.
# The `# pin-bump: re-verify _gated_torch_load + export2onnx torch.load
# signature` note on the torch pin (`torch>=2.4,<2.6` above) intentionally
# stays at the pin site, not here.
path = "src/woys/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/woys", "src/server", "src/audio", "src/tui"]
# src/server/LICENSE + src/server/NOTICE live inside the src/server package
# and ship in the wheel with it. The repo-root LICENSE + NOTICE are picked
# up automatically by hatchling's license-file globbing into
# dist-info/licenses/ (verified in the built wheel).

[tool.hatch.build.targets.sdist]
# NOTICE carries the proprietary/MIT license boundary; LICENSE + src/server/
# (which now includes src/server/LICENSE + src/server/NOTICE under "src/")
# satisfy the MIT copyright-notice requirement in the distributed artifact.
include = ["src/", "pkg/", "docs/", "tests/", "README.md", "LICENSE", "NOTICE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py311"
line-length = 100
# src/server/ is vendored upstream code (Phase 0 recon → Phase 1 trim). We don't
# enforce ruff/mypy on it yet — incremental cleanup happens in later phases.
extend-exclude = ["upstream", ".venv", "src/server", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
disallow_any_unimported = false
# src/server/ is vendored upstream code awaiting incremental cleanup.
exclude = ["upstream/", ".venv/", "build/", "src/server/"]

[[tool.mypy.overrides]]
module = ["soundfile", "sounddevice", "evdev", "textual.*", "rich.*", "onnxruntime", "onnxruntime.*", "librosa.*", "numpy.*", "scipy.*", "torch.*", "huggingface_hub.*", "onnxconverter_common", "onnxconverter_common.*", "onnx", "onnx.*", "pystray", "pystray.*", "PIL", "PIL.*", "tensorrt_libs"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires CUDA-capable GPU",
    "pipewire: requires PipeWire daemon",
    "audio_loopback: requires acoustic loopback rig",
    "slow: takes >5s",
    "real_audio: end-to-end audio quality test, runs slowly, GPU + voice models required",
]
